[build-system]
requires = [
  "setuptools >= 43",
  "Cython >= 3.1",
]
build-backend = "setuptools.build_meta"

[tool.black]
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.cibuildwheel]
environment-pass = ["USE_LIMITED_API"]
