[metadata]
name = cwcwidth
version = 0.1.5
author = Sebastian Ramacher
author_email = sebastian@ramacher.at
url = https://github.com/sebastinas/cwcwidth
description = Python bindings for wc(s)width
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
